# pipecraft

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pipecraft/: decorators.py  factory.py  types.py
pipecraft/extractors/: api.py  base.py  web.py
pipecraft/logger/: default.py
