[project]
name = "pipecraft"
version = "0.1.0"
description = "Flexible ETL library focusing on scraping and api pipelines"
requires-python = ">=3.8"
dependencies = [
    "cloudscraper>=1.2.71",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tomli>=2.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py38"

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["pipecraft"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipecraft"]
